--- a/src/main/webapp/vistas/catalogoimagenes/Create.xhtml
+++ b/src/main/webapp/vistas/catalogoimagenes/Create.xhtml
@@ -8,23 +8,25 @@
 
     <ui:composition>
 
-        <p:dialog id="CatalogoimagenesCreateDlg" widgetVar="CatalogoimagenesCreateDialog" modal="true" resizable="false" appendTo="@(body)" header="#{catalogoimg.CreateCatalogoimagenesTitle}">
+        <p:dialog id="CatalogoimagenesCreateDlg" widgetVar="CatalogoimagenesCreateDialog" modal="true" resizable="false" appendTo="@(body)" header="#{bundleCatalogoImg.CreateCatalogoimagenesTitle}">
             <h:form id="CatalogoimagenesCreateForm">
                 <h:panelGroup id="display">
                     <p:panelGrid columns="2" rendered="#{catalogoimagenesController.selected != null}">
-                        <p:outputLabel value="#{catalogoimg.CreateCatalogoimagenesLabel_idcatalogoimg}" for="idcatalogoimg" />
-                        <p:inputText id="idcatalogoimg" value="#{catalogoimagenesController.selected.idcatalogoimg}" title="#{catalogoimg.CreateCatalogoimagenesTitle_idcatalogoimg}" required="true" requiredMessage="#{catalogoimg.CreateCatalogoimagenesRequiredMessage_idcatalogoimg}"/>
-                        <p:outputLabel value="#{catalogoimg.CreateCatalogoimagenesLabel_satelite}" for="satelite" />
-                        <p:inputText id="satelite" value="#{catalogoimagenesController.selected.satelite}" title="#{catalogoimg.CreateCatalogoimagenesTitle_satelite}" />
-                        <p:outputLabel value="#{catalogoimg.CreateCatalogoimagenesLabel_modo}" for="modo" />
-                        <p:inputText id="modo" value="#{catalogoimagenesController.selected.modo}" title="#{catalogoimg.CreateCatalogoimagenesTitle_modo}" />
-                        <p:outputLabel value="#{catalogoimg.CreateCatalogoimagenesLabel_nivel}" for="nivel" />
-                        <p:inputText id="nivel" value="#{catalogoimagenesController.selected.nivel}" title="#{catalogoimg.CreateCatalogoimagenesTitle_nivel}" />
-                        <p:outputLabel value="#{catalogoimg.CreateCatalogoimagenesLabel_character}" for="character" />
-                        <p:inputText id="character" value="#{catalogoimagenesController.selected.character}" title="#{catalogoimg.CreateCatalogoimagenesTitle_character}" />
+                        <p:outputLabel value="#{bundleCatalogoImg.CreateCatalogoimagenesLabel_satelite}" for="satelite" />
+                        <p:inputText id="satelite" value="#{catalogoimagenesController.selected.satelite}" title="#{bundleCatalogoImg.CreateCatalogoimagenesTitle_satelite}" />
+                        <p:outputLabel value="#{bundleCatalogoImg.CreateCatalogoimagenesLabel_tipo}" for="tipo" />
+                        <p:inputText id="tipo" value="#{catalogoimagenesController.selected.tipo}" title="#{bundleCatalogoImg.CreateCatalogoimagenesTitle_tipo}" />
+                        <p:outputLabel value="#{bundleCatalogoImg.CreateCatalogoimagenesLabel_nivel}" for="nivel" />
+                        <p:inputText id="nivel" value="#{catalogoimagenesController.selected.nivel}" title="#{bundleCatalogoImg.CreateCatalogoimagenesTitle_nivel}" />
+                        <p:outputLabel value="#{bundleCatalogoImg.CreateCatalogoimagenesLabel_status}" for="status" />
+                        <p:inputText id="status" value="#{catalogoimagenesController.selected.status}" title="#{bundleCatalogoImg.CreateCatalogoimagenesTitle_status}" />
+                        <p:outputLabel value="#{bundleCatalogoImg.CreateCatalogoimagenesLabel_identificador}" for="identificador" />
+                        <p:inputText id="identificador" value="#{catalogoimagenesController.selected.identificador}" title="#{bundleCatalogoImg.CreateCatalogoimagenesTitle_identificador}" required="true" requiredMessage="#{bundleCatalogoImg.CreateCatalogoimagenesRequiredMessage_identificador}"/>
+                        <p:outputLabel value="#{bundleCatalogoImg.CreateCatalogoimagenesLabel_resolucion}" for="resolucion" />
+                        <p:inputText id="resolucion" value="#{catalogoimagenesController.selected.resolucion}" title="#{bundleCatalogoImg.CreateCatalogoimagenesTitle_resolucion}" />
                     </p:panelGrid>
-                    <p:commandButton actionListener="#{catalogoimagenesController.create}" value="#{catalogoimg.Save}" update="display,:CatalogoimagenesListForm:datalist,:growl" oncomplete="handleSubmit(args,'CatalogoimagenesCreateDialog');"/>
-                    <p:commandButton value="#{catalogoimg.Cancel}" onclick="CatalogoimagenesCreateDialog.hide()"/>
+                    <p:commandButton actionListener="#{catalogoimagenesController.create}" value="#{bundleCatalogoImg.Save}" update="display,:CatalogoimagenesListForm:datalist,:growl" oncomplete="handleSubmit(args,'CatalogoimagenesCreateDialog');"/>
+                    <p:commandButton value="#{bundleCatalogoImg.Cancel}" onclick="CatalogoimagenesCreateDialog.hide()"/>
                 </h:panelGroup>
             </h:form>
         </p:dialog>
