--- a/src/main/webapp/vistas/catalogoimagenes/List.xhtml
+++ b/src/main/webapp/vistas/catalogoimagenes/List.xhtml
@@ -10,16 +10,16 @@
 
 
         <ui:define name="title">
-            <h:outputText value="#{catalogoimg.ListCatalogoimagenesTitle}"></h:outputText>
+            <h:outputText value="#{bundleCatalogoImg.ListCatalogoimagenesTitle}"></h:outputText>
         </ui:define>
 
         <ui:define name="body">
             <h:form id="CatalogoimagenesListForm">
-                <p:panel header="#{catalogoimg.ListCatalogoimagenesTitle}">
+                <p:panel header="#{bundleCatalogoImg.ListCatalogoimagenesTitle}">
                     <p:dataTable id="datalist" value="#{catalogoimagenesController.items}" var="item"
                                  selectionMode="single" selection="#{catalogoimagenesController.selected}"
                                  paginator="true"
-                                 rowKey="#{item.idcatalogoimg}"
+                                 rowKey="#{item.identificador}"
                                  rows="10"
                                  rowsPerPageTemplate="10,20,30,40,50"
                                  >
@@ -29,39 +29,45 @@
 
                         <p:column>
                             <f:facet name="header">
-                                <h:outputText value="#{catalogoimg.ListCatalogoimagenesTitle_idcatalogoimg}"/>
-                            </f:facet>
-                            <h:outputText value="#{item.idcatalogoimg}"/>
-                        </p:column>
-                        <p:column>
-                            <f:facet name="header">
-                                <h:outputText value="#{catalogoimg.ListCatalogoimagenesTitle_satelite}"/>
+                                <h:outputText value="#{bundleCatalogoImg.ListCatalogoimagenesTitle_satelite}"/>
                             </f:facet>
                             <h:outputText value="#{item.satelite}"/>
                         </p:column>
                         <p:column>
                             <f:facet name="header">
-                                <h:outputText value="#{catalogoimg.ListCatalogoimagenesTitle_modo}"/>
+                                <h:outputText value="#{bundleCatalogoImg.ListCatalogoimagenesTitle_tipo}"/>
                             </f:facet>
-                            <h:outputText value="#{item.modo}"/>
+                            <h:outputText value="#{item.tipo}"/>
                         </p:column>
                         <p:column>
                             <f:facet name="header">
-                                <h:outputText value="#{catalogoimg.ListCatalogoimagenesTitle_nivel}"/>
+                                <h:outputText value="#{bundleCatalogoImg.ListCatalogoimagenesTitle_nivel}"/>
                             </f:facet>
                             <h:outputText value="#{item.nivel}"/>
                         </p:column>
                         <p:column>
                             <f:facet name="header">
-                                <h:outputText value="#{catalogoimg.ListCatalogoimagenesTitle_character}"/>
+                                <h:outputText value="#{bundleCatalogoImg.ListCatalogoimagenesTitle_status}"/>
                             </f:facet>
-                            <h:outputText value="#{item.character}"/>
+                            <h:outputText value="#{item.status}"/>
+                        </p:column>
+                        <p:column>
+                            <f:facet name="header">
+                                <h:outputText value="#{bundleCatalogoImg.ListCatalogoimagenesTitle_identificador}"/>
+                            </f:facet>
+                            <h:outputText value="#{item.identificador}"/>
+                        </p:column>
+                        <p:column>
+                            <f:facet name="header">
+                                <h:outputText value="#{bundleCatalogoImg.ListCatalogoimagenesTitle_resolucion}"/>
+                            </f:facet>
+                            <h:outputText value="#{item.resolucion}"/>
                         </p:column>
                         <f:facet name="footer">
-                            <p:commandButton id="createButton" icon="ui-icon-plus"   value="#{catalogoimg.Create}" actionListener="#{catalogoimagenesController.prepareCreate}" update=":CatalogoimagenesCreateForm" oncomplete="PF('CatalogoimagenesCreateDialog').show()"/>
-                            <p:commandButton id="viewButton"   icon="ui-icon-search" value="#{catalogoimg.View}" update=":CatalogoimagenesViewForm" oncomplete="PF('CatalogoimagenesViewDialog').show()" disabled="#{empty catalogoimagenesController.selected}"/>
-                            <p:commandButton id="editButton"   icon="ui-icon-pencil" value="#{catalogoimg.Edit}" update=":CatalogoimagenesEditForm" oncomplete="PF('CatalogoimagenesEditDialog').show()" disabled="#{empty catalogoimagenesController.selected}"/>
-                            <p:commandButton id="deleteButton" icon="ui-icon-trash"  value="#{catalogoimg.Delete}" actionListener="#{catalogoimagenesController.destroy}" update=":growl,datalist" disabled="#{empty catalogoimagenesController.selected}"/>
+                            <p:commandButton id="createButton" icon="ui-icon-plus"   value="#{bundleCatalogoImg.Create}" actionListener="#{catalogoimagenesController.prepareCreate}" update=":CatalogoimagenesCreateForm" oncomplete="PF('CatalogoimagenesCreateDialog').show()"/>
+                            <p:commandButton id="viewButton"   icon="ui-icon-search" value="#{bundleCatalogoImg.View}" update=":CatalogoimagenesViewForm" oncomplete="PF('CatalogoimagenesViewDialog').show()" disabled="#{empty catalogoimagenesController.selected}"/>
+                            <p:commandButton id="editButton"   icon="ui-icon-pencil" value="#{bundleCatalogoImg.Edit}" update=":CatalogoimagenesEditForm" oncomplete="PF('CatalogoimagenesEditDialog').show()" disabled="#{empty catalogoimagenesController.selected}"/>
+                            <p:commandButton id="deleteButton" icon="ui-icon-trash"  value="#{bundleCatalogoImg.Delete}" actionListener="#{catalogoimagenesController.destroy}" update=":growl,datalist" disabled="#{empty catalogoimagenesController.selected}"/>
                         </f:facet>
                     </p:dataTable>
                 </p:panel>
