--- a/src/main/webapp/vistas/solicitudesInternet/Create.xhtml
+++ b/src/main/webapp/vistas/solicitudesInternet/Create.xhtml
@@ -25,12 +25,19 @@
                                             </f:facet>                                        
                                             <p:outputLabel value="#{bundle.CreateSolicitudesInternetLabel_solicitud}" for="solicitud" />
                                             <p:inputText id="solicitud" value="#{solicitudesInternetController.selected.solicitud}" title="#{bundle.CreateSolicitudesInternetTitle_solicitud}" readonly="true" required="true" requiredMessage="#{bundle.CreateSolicitudesInternetRequiredMessage_solicitud}"/>
+                                            <p:outputLabel value="#{bundle.CreateSolicitudesInternetLabel_gestor}" for="gestor" />
+                                            <p:selectOneMenu id="gestor" filter="true" value="#{solicitudesInternetController.selectGestores}" required="true" requiredMessage="Es necesarion un gestor" >
+                                            <f:selectItems  value="#{gestoresController.getItemsActivos()}"
+                                                                var="gestorItem"
+                                                                itemValue="#{gestorItem}"/>
+                                            <p:ajax  listener="#{solicitudesInternetController.nombreOrganismo()}" update="nombre dependencia organismo"/>
+                                            </p:selectOneMenu>                                            
                                             <p:outputLabel value="#{bundle.CreateSolicitudesInternetLabel_nombre}" for="nombre" />
-                                            <p:inputText id="nombre" value="#{solicitudesInternetController.selected.nombre}" title="#{bundle.CreateSolicitudesInternetTitle_nombre}" />
+                                            <h:outputText id="nombre" value="#{solicitudesInternetController.selected.nombre}"  title="#{bundle.CreateSolicitudesInternetTitle_nombre}" />
                                             <p:outputLabel value="#{bundle.CreateSolicitudesInternetLabel_dependencia}" for="dependencia" />
-                                            <p:inputText id="dependencia" value="#{solicitudesInternetController.selected.dependencia}" title="#{bundle.CreateSolicitudesInternetTitle_dependencia}" />
+                                            <h:outputText id="dependencia" value="#{solicitudesInternetController.selected.dependencia}"  title="#{bundle.CreateSolicitudesInternetTitle_dependencia}" />
                                             <p:outputLabel value="#{bundle.CreateSolicitudesInternetLabel_organismo}" for="organismo" />
-                                            <p:inputText id="organismo" value="#{solicitudesInternetController.selected.organismo}" title="#{bundle.CreateSolicitudesInternetTitle_organismo}" />
+                                            <h:outputText id="organismo" value="#{solicitudesInternetController.selected.organismo}" title="#{bundle.CreateSolicitudesInternetTitle_organismo}" />
                                             <p:outputLabel value="#{bundle.CreateSolicitudesInternetLabel_tema}" for="tema" />
                                             <p:inputText id="tema" value="#{solicitudesInternetController.selected.tema}" title="#{bundle.CreateSolicitudesInternetTitle_tema}" />
                                             <p:outputLabel value="#{bundle.CreateSolicitudesInternetLabel_nubosidad}" for="nubosidad" />
@@ -43,12 +50,6 @@
                                             <p:calendar id="fechaCaptura" pattern="MM/dd/yyyy" value="#{solicitudesInternetController.selected.fechaCaptura}" readonly="true" disabled="true" title="#{bundle.EditSolicitudesInternetTitle_fechaCaptura}"  />
                                             <p:outputLabel value="#{bundle.CreateSolicitudesInternetLabel_fechaVentanilla}" for="fechaVentanilla" />
                                             <p:calendar id="fechaVentanilla" pattern="MM/dd/yyyy" value="#{solicitudesInternetController.selected.fechaVentanilla}" readonly="true" disabled="true" title="#{bundle.EditSolicitudesInternetTitle_fechaVentanilla}"  />                                                 
-                                            <p:outputLabel value="#{bundle.CreateSolicitudesInternetLabel_gestor}" for="gestor" />
-                                            <p:selectOneMenu id="gestor" filter="true" value="#{solicitudesInternetController.selectGestores}" >
-                                            <f:selectItems  value="#{gestoresController.getItemsActivos()}"
-                                                                var="gestorItem"
-                                                                itemValue="#{solicitudesInternetController.selected.gestor}"/>
-                                            </p:selectOneMenu>
                                             <p:outputLabel  value="#{bundle.CreateSolicitudesInternetLabel_justificacion}" for="justificacion"  />                                 
                                             <p:inputTextarea id="justificacion"  rows="10" cols="50" autoResize="false" style="resize: none" value="#{solicitudesInternetController.selected.justificacion}" title="#{bundle.CreateSolicitudesInternetTitle_justificacion}" /> 
 
@@ -140,9 +141,9 @@
                                                  rowKey="#{item.identificador}"
                                                  selection="#{catalogoimagenesController.imgSelect}" 
                                                  >
-                                            <p:ajax event="rowSelectCheckbox"    listener="#{catalogoimagenesController.onSeleccion()}" />
-                                            <p:ajax event="rowUnselectCheckbox" listener="#{catalogoimagenesController.offSeleccion()}"/>
-                                             <p:column selectionMode="multiple" styleClass="selectionCheckBox" />
+                                            <p:ajax event="rowSelectCheckbox" listener="#{solicitudesInternetController.ModoNivel(catalogoimagenesController.imgSelect)}" update="SolicitudesInternetCreateForm:idCreateButton"/>
+                                            <p:ajax event="rowUnselectCheckbox" listener="#{solicitudesInternetController.ModoNivel(catalogoimagenesController.imgSelect)}" update="SolicitudesInternetCreateForm:idCreateButton"/>
+                                            <p:column selectionMode="multiple" styleClass="selectionCheckBox" />
                                             <p:column>
                                                 <f:facet name="header">
                                                     <h:outputText value="Identificador"/>
@@ -170,8 +171,7 @@
                                         </p:dataTable>
                                     </h:form>                                  
                                 </f:view>
-                                <p:commandButton id="idAceptarNT" value="Aceptar" actionListener="#{solicitudesInternetController.ModoNivel(catalogoimagenesController.imgSelect)}"/>
-                                <p:commandButton id="idCrearCatalogoIMg" icon="ui-icon-plus"   value="Otro" actionListener="#{catalogoimagenesController.prepareCreate()}" update=":CatalogoimagenesCreateForm" oncomplete="PF('CatalogoimagenesCreateDialog').show()"/>                                        
+                                <p:commandButton id="idAceptarNT" value="Aceptar" actionListener="#{solicitudesInternetController.ModoNivel(catalogoimagenesController.imgSelect)}" update="SolicitudesInternetCreateForm:idCreateButton"/>
                                </p:panel>                            
                         </p:tab>
 
@@ -238,13 +238,12 @@
                                         </p:calendar>
                                     </p:panelGrid>
                                 </p:panelGrid> 
-                                <p:commandButton type="Submit" actionListener="#{solicitudesInternetController.create}" value="#{bundle.Save}" update="display,:SolicitudesInternetListForm:datalist,:growl" onclick="SolicitudesInternetDialog.hide"/>
-                                <p:commandButton value="#{bundle.Cancel}" oncomplete="SolicitudesInternetCreateForm.hide()"/>
                             </p:panel>
                         </p:tab>
                     </p:wizard>
                 </h:panelGroup>
-
+               <p:commandButton id="idCreateButton" type="Submit" actionListener="#{solicitudesInternetController.create}" value="#{bundle.Save}" disabled="#{empty solicitudesInternetController.selected.modo}" update="display,:SolicitudesInternetListForm:datalist,:growl" onclick="SolicitudesInternetDialog.hide"/>
+              <p:commandButton value="#{bundle.Cancel}" oncomplete="SolicitudesInternetCreateForm.hide()"/>
             </h:form>
 
             <ui:include src="../catalogoimagenes/CreateSolic.xhtml"/>
