--- a/src/main/webapp/vistas/gestores/Edit.xhtml
+++ b/src/main/webapp/vistas/gestores/Edit.xhtml
@@ -7,9 +7,8 @@
       xmlns:p="http://primefaces.org/ui">
 
     <ui:composition>
-        <p:dialog id="GestoresEditDlg" widgetVar="GestoresEditDialog" width="1000" closable="false" modal="true" resizable="false" appendTo="@(body)" header="#{bundle.EditGestoresTitle}">
+        <p:dialog id="GestoresEditDlg" widgetVar="GestoresEditDialog" modal="true" resizable="false" appendTo="@(body)" header="#{bundle.EditGestoresTitle}"  width="1000" closable="false">
             <h:form id="GestoresEditForm" enctype="multipart/form-data">
-                <p:growl id="growl1"/>
                 <p:wizard id="wizardEditGestor" widgetVar="wizEditGestor" nextLabel="#{bundle.BotonSiguiente}" backLabel="#{bundle.BotonAtras}">
                     <p:tab id="tabEditGestor" title="#{bundle.GestorTitle}">
                         <p:panel>
@@ -57,7 +56,7 @@
                     </p:tab>
                     <p:tab id="tabEditPersonas" title="#{bundle.PersonasTitle}">
                             <p:panel header="#{bundle.PersonasGDPanel}">
-                                <p:messages />
+                                <p:messages closable="true"/>
                                 <p:panelGrid >
                                     <p:row>
                                         <p:column style="display: none;"> 
@@ -160,10 +159,9 @@
                                 </p:panelGrid>
                                 </p:fieldset>         
                         </p:tab>
-                    </p:wizard>                
-                <p:commandButton value="#{bundle.Cancel}" actionListener="#{gestoresController.reset}"  oncomplete="PF('wizEditGestor').loadStep('tabEditGestor',true);PF('GestoresEditDialog').hide();"/>
-                <p:commandButton actionListener="#{gestoresController.update}" value="#{bundle.Save}" update=":GestoresListForm:datalist,:growl" oncomplete="handleSubmit(args, 'GestoresEditDialog');PF('wizEditGestor').loadStep('tabEditGestor',true);"/>                    
-                                
+                    </p:wizard>
+                <p:commandButton value="#{bundle.Save}"  actionListener="#{gestoresController.update}"  oncomplete="PF('wizEditGestor').loadStep('tabEditGestor',true);PF('GestoresEditDialog').hide();" update=":GestoresListForm:datalist,:growl" />                              
+                <p:commandButton value="#{bundle.Cancel}" actionListener="#{gestoresController.reset}"  oncomplete="PF('wizEditGestor').loadStep('tabEditGestor',true);PF('GestoresEditDialog').hide();"/>                  
             </h:form>
             <ui:include src="../personas/Editar.xhtml"/>
         </p:dialog>
